--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,23 +1,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#131"
-    tools:context="com.example.nickolas.vk.fragments.MainFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.example.nickolas.vk.fragments.MainFragment">
+
 
     <FrameLayout
+        android:id="@+id/frame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_weight="1"/>
 
-    </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:menu="@menu/bottom_navigation_bar"
-        android:background="#fff"/>
+        android:background="#fff"
+        app:menu="@menu/bottom_navigation_bar" />
+
 
 </LinearLayout>
