--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -4,7 +4,7 @@
         android:width="1dp"
         android:color="#6094bf" />
 
-    <solid />
+    <solid android:color="#6094bf" />
 
     <padding
         android:left="1dp"
