--- a/app/src/main/res/layout/dialog_item_view.xml
+++ b/app/src/main/res/layout/dialog_item_view.xml
@@ -1,103 +1,109 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:background="#ffff"
-    android:orientation="horizontal"
-    android:padding="10dp">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="5dp"
+    app:cardElevation="5dp">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/dialogAvatarImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/gradient" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="10dp"
-        android:layout_toEndOf="@+id/dialogAvatarImage"
-        android:orientation="vertical">
+        android:layout_height="75dp"
+        android:background="#ffff"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/dialogAvatarImage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/gradient" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/user_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:text="TextView"
-                android:textSize="20sp" />
-
-            <ImageView
-                android:id="@+id/online_indicator"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="5dp"
-                android:layout_weight="1"
-                android:visibility="gone"
-                app:srcCompat="@android:drawable/presence_online" />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/dialogMessage"
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toEndOf="@+id/dialogAvatarImage"
+            android:orientation="vertical">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/my_avatar"
-                android:layout_width="20dp"
-                android:layout_height="match_parent"
-                android:layout_marginRight="5dp"
-                android:visibility="gone" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/last_message"
+                <TextView
+                    android:id="@+id/user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:text="TextView"
+                    android:textSize="20sp" />
+
+                <ImageView
+                    android:id="@+id/online_indicator"
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:visibility="gone"
+                    app:srcCompat="@android:drawable/presence_online" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/dialogMessage"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginRight="15dp"
-                android:ellipsize="end"
-                android:gravity="center|start"
-                android:paddingRight="5dp"
-                android:singleLine="true"
-                android:text="dfgsdfgsdfgsdfgdfgsdfgsdfg"
-                android:textSize="12sp" />
+                android:layout_height="match_parent">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/my_avatar"
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="5dp"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/last_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="15dp"
+                    android:ellipsize="end"
+                    android:gravity="center|start"
+                    android:paddingRight="5dp"
+                    android:singleLine="true"
+                    android:text="dfgsdfgsdfgsdfgdfgsdfgsdfg"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/count_of_messages"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentBottom="true"
 
-    </LinearLayout>
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/rounded_corner"
+            android:gravity="center_horizontal|center"
+            android:text="53"
+            android:textColor="@color/vk_white"
+            android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/count_of_messages"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_alignParentBottom="true"
-
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/rounded_corner"
-        android:gravity="center_horizontal|center"
-        android:text="53"
-        android:textColor="@color/vk_white"
-        android:textSize="14sp" />
-
-    <TextView
-        android:id="@+id/last_message_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:text="22:22"
-        android:textColor="@color/vk_share_link_color"
-        android:textSize="12sp" />
-
-</RelativeLayout>
+        <TextView
+            android:id="@+id/last_message_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:text="22:22"
+            android:textColor="@color/vk_share_link_color"
+            android:textSize="12sp" />
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
